# dnd-charlist

./: .editorconfig  .gitignore  Makefile
client/: package.json
client/src-tauri/: Cargo.toml  tauri.conf.json
resources/proto/: storage.proto
server/: .rustfmt.toml  Cargo.toml  build.rs
server/sql_migrations/: V1__initial.sql
server/src/: error.rs  main.rs  object_storage.rs  rpc.rs
server/src/commands/: create_storage.rs  mod.rs  property.rs  start.rs
